feature: winning streak

--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
       Good Luck!
     </div>
 
+    <p class="winning-streak">Winning streak: <span id="winning-streak">0</span></p>
+
     <script type="text/javascript" src="script.js"></script>
   </body>
 
